lots of reformmating probably fucks up merging

--- a/views/swipe.ejs
+++ b/views/swipe.ejs
@@ -7,22 +7,22 @@
         <!-- the form awesome library is used to add icons to our form -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
         <!-- include the stylesheet file -->
-        <link href="/style.css" rel="stylesheet" type="text/css">
+        <link href="swipe.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="login">
 			<h1>"Swipe" Card</h1>
 			<form action="/auth" method="post">
-				<label for="Full Name">
+				<label for="name">
 					<!-- font awesome icon -->
 					<i class="fas fa-user"></i>
 				</label>
-				<input type="text" name="name" placeholder="John Smith" id="name" required>
+				<input type="text" name="name" placeholder="Chris Griebenow" id="name" required>
 				<label for="pid">
 					<i class="fas fa-user"></i>
 				</label>
 				<input type="text" name="pid" placeholder="A12345678" id="pid" required>
-				<input type="submit" value="Login">
+				<input type="submit" value="Swipe">
 			</form>
 		</div>
 	</body>
