--- a/views/gotopc.ejs
+++ b/views/gotopc.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <p>Go to PC <span id="pcName"><%= pcName %></span></p>
+        <p>Go to PC <span id="availPC"><%= availPC %></span></p>
 
         <button onclick="goToHomepage()">Ok</button>
     </div>
