--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,52 +8,52 @@
 <div id="Seats">
     <div class="Row">
         <div class="Left">
-            <div class="PC available">D1</div>
-            <div class="PC available">D2</div>
-            <div class="PC available">D3</div>
-            <div class="PC available">D4</div>
-            <div class="PC available">D5</div>
-            <div class="PC available">D6</div>
+            <div class="PC available pc-item" data-pc-name="D1">D1</div>
+            <div class="PC available pc-item" data-pc-name="D2">D2</div>
+            <div class="PC available pc-item" data-pc-name="D3">D3</div>
+            <div class="PC available pc-item" data-pc-name="D4">D4</div>
+            <div class="PC available pc-item" data-pc-name="D5">D5</div>
+            <div class="PC available pc-item" data-pc-name="D6">D6</div>
         </div>
         <div class="right">
-            <div class="PC available">E1</div>
+            <div class="PC available pc-item" data-pc-name="E1">E1</div>
         </div>
     </div>
     <div class="Row">
         <div class="Left">
-            <div class="PC available">C1</div>
-            <div class="PC available">C2</div>
-            <div class="PC available">C3</div>
-            <div class="PC available">C4</div>
-            <div class="PC available">C5</div>
-            <div class="PC available">C6</div>
+            <div class="PC available pc-item" data-pc-name="C1">C1</div>
+            <div class="PC available pc-item" data-pc-name="C2">C2</div>
+            <div class="PC available pc-item" data-pc-name="C3">C3</div>
+            <div class="PC available pc-item" data-pc-name="C4">C4</div>
+            <div class="PC available pc-item" data-pc-name="C5">C5</div>
+            <div class="PC available pc-item" data-pc-name="C6">C6</div>
         </div>
         <div class="right">
-            <div class="PC available">E2</div>
+            <div class="PC available pc-item" data-pc-name="E2">E2</div>
         </div>
     </div>
     <div class="Row">
         <div class="Left">
-            <div class="PC available">B1</div>
-            <div class="PC available">B2</div>
-            <div class="PC available">B3</div>
-            <div class="PC available">B4</div>
-            <div class="PC available">B5</div>
+            <div class="PC available pc-item" data-pc-name="B1">B1</div>
+            <div class="PC available pc-item" data-pc-name="B2">B2</div>
+            <div class="PC available pc-item" data-pc-name="B3">B3</div>
+            <div class="PC available pc-item" data-pc-name="B4">B4</div>
+            <div class="PC available pc-item" data-pc-name="B5">B5</div>
         </div>
         <div class="right">
-            <div class="PC available">E3</div>
+            <div class="PC available pc-item" data-pc-name="E3">E3</div>
         </div>
     </div>
     <div class="Row">
         <div class="Left">
-            <div class="PC available">A1</div>
-            <div class="PC available">A2</div>
-            <div class="PC available">A3</div>
-            <div class="PC available">A4</div>
-            <div class="PC available">A5</div>
+            <div class="PC available pc-item" data-pc-name="A1">A1</div>
+            <div class="PC available pc-item" data-pc-name="A2">A2</div>
+            <div class="PC available pc-item" data-pc-name="A3">A3</div>
+            <div class="PC available pc-item" data-pc-name="A4">A4</div>
+            <div class="PC available pc-item" data-pc-name="A5">A5</div>
         </div>
         <div class="right">
-            <div class="PC available">E4</div>
+            <div class="PC available pc-item" data-pc-name="E4">E4</div>
         </div>
     </div>
 </div>
@@ -68,6 +68,22 @@
             changeStatus(data.pcList[i].name, data.pcList[i].status)
         }
     });
+
+    const pcItems = document.querySelectorAll('.pc-item');
+    console.log(pcItems)
+    pcItems.forEach((pcItem) => {
+        pcItem.addEventListener('mouseenter', () => {
+        const pcName = pcItem.dataset.pcName;
+        console.log(pcName)
+        socket.emit('getPcInfo', { pcName });
+        });
+    });
+
+    socket.on('pcInfo', (data) => {
+        console.log(data)
+    });
+
+    
   </script>
 <script type="text/javascript" src="script.js"> </script>
 </html>
