--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,15 @@
     padding: 20px;
     background-color:silver;
 }
+.tooltip {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    z-index: 1;
+}
 *{
     margin: 15px;
 }
