--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-<div class="add"><button>Add a ticket</button></div>
+<div class="add"><a href="swipe"><button>Swipe Student ID to get a spot!</button></a></div>
 <div class="Cafe">Cafe</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
