--- a/views/alreadyQueued.ejs
+++ b/views/alreadyQueued.ejs
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <p>Go to PC <span id="availPC"><%= availPC %></span></p>
+        <p>You are already in line</p>
+        <p>You are number <span id="spotInLine"><%= spotInLine %></span> in line</p>
 
         <button onclick="goToHomepage()">Ok</button>
     </div>
