--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,7 @@
     background-color: lightcoral;
 }
 .OutOfOrder{
-    background-color: yellow;
+    background-color: gray;
 }
 button{
     display: inline-block;
