--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,7 @@
     height: 20px;
     padding: 20px;
     background-color:silver;
+    
 }
 .Cafe{
     display: block;
@@ -171,6 +172,7 @@ button{
     color: rgba(255, 255, 255, 0.5);
     background-color: rgba(255, 255, 255, 0.1);
     pointer-events: none;
+    visibility: hidden;
   }
   
   .box:hover::before {
