--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -64,7 +64,13 @@
         </select>
         <!-- <button class="disable">Assign PC</button> -->
         <button class="removeFromQueue">Remove</button>
-
+    </div>
+    <div class="box">
+        <!-- <label>Current Sessions</label> -->
+        <select id="sessions">
+            <option selected disabled>Current Sessions</option>
+        </select>
+        <!-- <button class="disable">Assign PC</button> -->
     </div>
     <div class="box">
         <!-- <label>Disable/Enable PCs</label> -->
@@ -106,7 +112,16 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
 <script>
-    
+    function sortByProperty(property){  
+        return function(a, b){  
+            if(parseInt(a[property]) > parseInt(b[property]))  
+                return -1;  
+            else if(parseInt(a[property]) < parseInt(b[property]))  
+                return 1;  
+        
+            return 0;  
+        }  
+    }
     const socket = io();
     socket.on('pcStatusUpdate', (data) => {
         for(let i = 0; i < data.pcList.length; i++){
@@ -168,7 +183,25 @@
             option.value = data[i].pid
             queueMembersDropdown.appendChild(option);
         }
+    });
+    let currentSessionsDropdown = document.getElementById('sessions');
+    currentSessionsDropdown.addEventListener("click", ()=>{
+        socket.emit("getCurrSession", {});
     })
+    socket.on('currentSessions', (data) =>{
+        currentSessionsDropdown.innerHTML = '';
+        data = data.result;
+        const option = document.createElement('option');
+        option.text = "Current Sessions"
+        currentSessionsDropdown.appendChild(option);
+        data.sort(sortByProperty("time"));
+        console.log(data);
+        for (let i = 0; i < data.length; i++) {
+            const option = document.createElement('option');
+            option.text = `${data[i].name}: ${data[i].time} minutes`
+            currentSessionsDropdown.appendChild(option);
+        }
+    });
 
     const pcItems = document.querySelectorAll('.pc-item');
     pcItems.forEach((pcItem) => {
