--- a/views/gotopc.ejs
+++ b/views/gotopc.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="textPage.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/textPage.css">
     <title>TEC Controller</title>
 </head>
 <body>
@@ -20,3 +20,4 @@
     </script>
 </body>
 </html>
+
