ADded ucsd favicon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="ucsdlogo.jpg" />
     </head>
 <div class="body">
 <div class="Garage">Garage</div>
