--- a/views/pcPicker.ejs
+++ b/views/pcPicker.ejs
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link href="/style.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="/ucsdlogo.jpg" />
+
     </head>
     <div class="centeredHeader">
         <h1>Click an available PC to select it</h1>
