--- a/views/queue.ejs
+++ b/views/queue.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="textPage.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="ucsdlogo.jpg" />
     <title>TEC Controller</title>
 </head>
 <body>
