--- a/views/setup.ejs
+++ b/views/setup.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="setup.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="ucsdlogo.jpg" />
     </head>
 <body>
 
