--- a/views/swipe.ejs
+++ b/views/swipe.ejs
@@ -6,6 +6,7 @@
 		<title>Login</title>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
         <link href="swipe.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="ucsdlogo.jpg" />
 	</head>
 	<body>
 		<div class="login">
