--- a/views/gotopc.ejs
+++ b/views/gotopc.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/textPage.css">
+    <link rel="shortcut icon" href="/ucsdlogo.jpg" />
+
     <title>TEC Controller</title>
 </head>
 <body>
