--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -195,10 +195,9 @@
         option.text = "Current Sessions"
         currentSessionsDropdown.appendChild(option);
         data.sort(sortByProperty("time"));
-        console.log(data);
         for (let i = 0; i < data.length; i++) {
             const option = document.createElement('option');
-            option.text = `${data[i].name}: ${data[i].time} minutes`
+            option.text = `PC: ${data[i].pcName}: ${data[i].userData.name}, ${data[i].time} minutes`
             currentSessionsDropdown.appendChild(option);
         }
     });
