--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,8 +57,28 @@
         </div>
     </div>
 </div>
-<div class="add"><a href="swipe"><button>Swipe Student ID to get a spot!</button></a></div>
+<div class="buttons">
+    <div class="schedule"><button>Esports Hours Schedule</button></div>
+    <div class="add"><a href="swipe"><button id="swipe">Swipe Student ID to get a spot!</button></a></div>
+</div>
 <p class="QueueSize">Current queue size: </p>
+<dialog id="myDialog"><p>Esport Hours: </p>
+
+    <p>Monday: 4pm to 10pm</p>
+    
+    <p>Wednesday: 4pm to 10pm</p>
+    
+    <p>Friday: 4pm to 10pm</p>
+    
+    <p>Saturday: 10:30am to 6pm</p>
+    
+    <p>Sunday: 12pm to 7pm</p>
+    
+    <p>During esport hours, the tec are reserved for esport practices and matches only. 
+    Anyone not related to the team or not using the facility for esports reason need to use tec outside of esport hours.</p>
+    
+    <button id="closeModal">Got it!</button>
+</dialog>
 <div class="Cafe">Cafe</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
@@ -73,7 +93,17 @@
     socket.on('queueUpdated', (data)=>{
         queueSize.innerText = `Current queue size: ${data.queueList.length}`; 
     });
- 
+
+    const scheduleButton = document.getElementsByClassName("schedule")[0];
+    let dialog = document.getElementById("myDialog");
+    scheduleButton.addEventListener("click", ()=>{
+        dialog.showModal();
+    })
+    const closeButton = document.getElementById("closeModal");
+    closeButton.addEventListener("click", ()=>{
+        dialog.close();
+    })
+    const swipe = document.getElement
     
   </script>
 <script type="text/javascript" src="script.js"> </script>
