--- a/views/managerLogin.ejs
+++ b/views/managerLogin.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,minimum-scale=1">
-		<title>Admin Login</title>
+		<title>Manager Login</title>
         <!-- the form awesome library is used to add icons to our form -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
         <!-- include the stylesheet file -->
@@ -13,8 +13,8 @@
 	</head>
 	<body>
 		<div class="login">
-			<h1>Login as Admin</h1>
-			<form action="/login" method="get">
+			<h1>Login as Team Manager</h1>
+			<form action="/managerLogin" method="get">
 				<label for="name">
 					<!-- font awesome icon -->
 					<i class="fas fa-user"></i>
