--- a/views/manager.ejs
+++ b/views/manager.ejs
@@ -6,10 +6,13 @@
     </head>
 <div class="body">
     <div class = "centeredHeader">
-        <h1>Select PC's to reserve</h1>
+        <h1>Select time first, then select PC's</h1>
     </div>
 <div class="Garage">Garage</div>
 <div id="Seats">
+    <label for="reservationTime">Reservation Time</label>
+    <input type="datetime-local" id="reservationTime" name="reservationTime">
+    <button  onclick="submitReservation()" role="button">Submit Reservation</button>
     <div class="Row">
         <div class="Left">
             <div class="PC Available pc-item" data-pc-name="D1">D1</div>
@@ -63,11 +66,6 @@
 </div>
 <div class="Cafe">Cafe</div>
 </div>
-<div class = "centerSchedule">
-    <label for="reservationTime">Reservation Time</label>
-    <input type="datetime-local" id="reservationTime" name="reservationTime">
-    <button  onclick="submitReservation()" role="button">Submit Reservation</button>
-</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
 <script>
@@ -76,9 +74,7 @@
         for(let i = 0; i < data.pcList.length; i++){
             if(data.pcList[i].status == "OutOfOrder"){
                 changeStatus(data.pcList[i].name, data.pcList[i].status)
-            } else {
-                changeStatus(data.pcList[i].name, "Available")
-            }
+            } 
         }
     });
 
@@ -107,16 +103,33 @@
         });
     });
 
+    const timestampKeeper = document.getElementById("reservationTime");
+    timestampKeeper.addEventListener("change", (event) => {
+        let timestamp = timestampKeeper.value
+        timestamp = new Date(timestamp).getTime()
+        socket.emit("checkReservationTime", {timestamp: timestamp})
+    });
+
+
     function submitReservation(){
         reservedPCList = []
-        timestamp = document.getElementById('reservationTime').value
+        let timestamp = document.getElementById('reservationTime').value
+        timestamp = new Date(timestamp).getTime()
         pcItems.forEach((pcItem) => {
             if(pcItem.classList.contains("Reserved")){
                 reservedPCList.push(pcItem.dataset.pcName)
             }
         });
         socket.emit("reservedPC", {timestamp: timestamp, pcList: reservedPCList})
+        alert("Reservation Successful");
     }
+
+    socket.on("takenPCs", (data) =>{
+        console.log(data)
+        for(let i = 0; i < data.takenPCList.length; i++){
+            changeStatus(data.takenPCList[i], "Used")
+        }
+     });
   </script>
 <script type="text/javascript" src="script.js"> </script>
 </html>
