--- a/public/style.css
+++ b/public/style.css
@@ -69,7 +69,7 @@
     background-color: gray;
 }
 .Reserved{
-    background-color: blue;
+    background-color: orange;
 }
 .buttons{
     padding: 5px;
